<resources>
    <string name="app_name">CPC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connectivity">No Internet Connect</string>
    <string name="please_confirm">Please Confirm</string>
    <string name="okay">Okay</string>
    <string name="name">Name</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="password">Password</string>
    <string name="enter_password_hint">Enter your password</string>
    <string name="login">Login</string>
    <string name="projects">Projects</string>
    <string name="service_schedule">Service Schedule</string>
    <string name="service">Service</string>
    <string name="crm_schedule">CRM Schedule</string>
    <string name="logout">Logout</string>
    <string name="under_development">Under Development</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="search">SEARCH</string>
    <string name="eta">ETA</string>
    <string name="stage">Stage</string>
    <string name="email">Email</string>
    <string name="enter_email_hint">Enter your email</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="enter_mobile_number_hint">Enter your mobile number</string>
    <string name="office_no">Office Phone</string>
    <string name="enter_office_number_hint">Enter your office number</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="profile_update_successfully">Profile updated successfully</string>
    <string name="start_your_day">Start Your Day</string>
    <string name="end_your_day">End Your Day</string>
    <string name="cost_code">Cost Code</string>
    <string name="select_cost_code">Select Cost Code</string>
    <string name="check_out_successfully">Successfully Clocked Out</string>
    <string name="check_in_successfully">Successfully Clocked In</string>
    <string name="order_id">Order ID</string>
    <string name="property">Property</string>
    <string name="service_type">Service Type</string>
    <string name="not_to_exceed">Not To Exceed</string>
    <string name="technician">Technician</string>
    <string name="truck_id">Truck Id</string>
    <string name="created_by">Created By</string>
    <string name="ticket_info">Ticket Info</string>
    <string name="technician_instructions">Technician Instructions</string>
    <string name="time_keeping_entries">Timekeeping Entries</string>
    <string name="date">Date</string>
    <string name="task">Task</string>
    <string name="time_in">Time In</string>
    <string name="time_out">Time Out</string>
    <string name="hours">Hours</string>
    <string name="employee">Employee</string>
    <string name="service_repairs">Service Repairs</string>
    <string name="repairs">Repairs</string>
    <string name="repair_heading">Repair: Please build your repair</string>
    <string name="repair">Repair</string>
    <string name="section">Section</string>
    <string name="quantity">Quantity</string>
    <string name="problem">Problem</string>
    <string name="resolution">Resolution</string>
    <string name="task_and_meetings">Task &amp; Meetings</string>
    <string name="due">Due</string>
    <string name="time">Time</string>
    <string name="completed">Completed</string>
    <string name="for_">For</string>
    <string name="with">With</string>
    <string name="company">Company</string>
    <string name="opportunity">Opportunity</string>
    <string name="estimate_material">Estimate Material</string>
    <string name="material">Material</string>
    <string name="labour">Labour</string>
    <string name="other">Other</string>
    <string name="total">Total</string>
    <string name="cost">Cost</string>
    <string name="taxable">Taxable</string>
    <string name="units">Units</string>
    <string name="history_and_notes">History &amp; Notes</string>
    <string name="note">Note</string>
    <string name="file">File</string>
    <string name="title">Title</string>
    <string name="resource">Resource</string>
    <string name="on_my_way">On My Way</string>
    <string name="start_the_clock_and_open_ticket">Start the clock &amp; Open ticket</string>
    <string name="manager">Name of Manager</string>
    <string name="enter_manager_name">Enter manager name</string>
    <string name="notes">Notes</string>
    <string name="check_in">Check In</string>
    <string name="continue_">Continue</string>
    <string name="site_bid">Site Bid</string>
    <string name="add_repair">Add Repair</string>
    <string name="capture_repair">Capture Repair</string>
    <string name="search_repair_membrane">Serach Repairs Membrane</string>
    <string name="unit">Unit</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="water_penetrate_heading">Can water penetrate the roof here?</string>
    <string name="correction">Correction</string>
    <string name="you_must_accept_permission">You must accept the permission first</string>
    <string name="enter_correction">Enter Correction</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="name_of_manager">Name of Manager</string>
    <string name="submit">Submit</string>
    <string name="location">Location</string>
    <string name="take_problem_photos">Take Problem Photos</string>
    <string name="take_resolution_photos">Take Resolution Photos</string>
    <string name="problem_photos">Problem Photos</string>
    <string name="resolution_photos">Resolution Photos</string>
    <string name="required_photos">Required Photos</string>
    <string name="review_completed_work">Review Completed Work</string>
    <string name="confirmation">Confirmation</string>
    <string name="review_msg">Review the following information with manager</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="capture_signature_msg">Please capture signature from the manager</string>
    <string name="capture_signature">Capture Signature</string>
    <string name="update_ticket">Update Ticket</string>
    <string name="done">Done</string>
    <string name="review_work_completed">Review Work Completed</string>
</resources>